--- a/teaching/1610.markdown
+++ b/teaching/1610.markdown
@@ -12,14 +12,15 @@ title: MATH-1610
 
 ### Instructor
 
-My name is _Dr. Tianran Chen_, and my job is to help you to succeed in this class.
-I will be happy to discuss issues related to this course (or anything mathematical)
-in person or through email:
-
+* Name: Dr. Tianran Chen
 * Email: <tchen1@aum.edu>
 * Office: 301A Goodwyn Hall
 * Office hour: MW 3pm -- 5pm, TT 2pm -- 3pm
 * Web page: <http://www.tianranchen.org>
+
+My job is to help you to succeed in this class.
+I will be happy to discuss issues related to this course 
+(or anything mathematical) in person or via email:
 
 ### What we will learn
 
@@ -48,14 +49,36 @@ _Calculus: Early Transcendentals_ (6th edition) by Larson & Edwards
 
 ### Policy for calculators and smart devices
 
-You may use scientific calculators for each test, but you will be required to show all work for the part of the mid-term exam and the final exam and if you rely on calculators for answers you will get a zero credit. Graphing calculators such as TI-89 or TI-92 are not allowed on any of the exams. Laptop computers, iPads, cell phones or other devices with internet capabilities are also not allowed. 
+You may use scientific calculators one quizzes or exams for basic arithmetics.
+However, since these are designed to test your skills in algebra and calculus
+(rather than your skill in using a calculator), you shall not rely on caculators
+for algebraic manipulation, differentiation, or integration.
+Therefore advanced graphing calculators such as TI-89 or TI-92 are not allowed 
+on any of the quizzes and exams. 
+Similarly, any smart devices with internet capabilities are also not allowed.
+
+### Quizzes
+
+### Mid-term exam
+
+### Final exam
+
+### Homework
 
 ### Grade composition
 
-Your final grade is determined according to your overall performance of quizzes, the mid-term exam, and the final exam, and is calculated according to the following weight.
+Your final grade is determined according to your overall performance of quizzes, 
+the mid-term exam, and the final exam, and is calculated according to the following weight.
 
 | Component | Weight |
 |-----------|--------|
 | Quizzes | 50% | 
 | Mid-term Exam | 25% |
 | Final Exam | 25% |
+
+## University policies
+
+**Student Privacy Policy:** The family Education Rights and Privacy Act of 1974, 
+as amended, (FERPA) requires institutions receiving federal monies to protect
+the privacy of students' educational records.
+For details go to the AUM's FERPA website: <http://www.aum.edu/academics/Registrars-office>
