Added disability accommodations

--- a/teaching/1610.markdown
+++ b/teaching/1610.markdown
@@ -128,7 +128,19 @@ Borderline grades are determined by in-class participation
 
 ## University policies
 
-**Student Privacy Policy:** The Family Education Rights and Privacy Act of 1974, 
+**Disability accommodations:**
+Students who need accommodations are asked to arrange a meeting 
+during office hours to discuss your accommodations.
+If you have a conflict with my office hours, an alternative time
+can be arranged.
+To set up thjis meeting, please contact me by e-mail.
+If you have not registered for accommodation services through
+the Center for Disability Services (CDS), but need accommodations,
+make an appointment with CDS, 147 Taylor Center,
+or call 334-244-2631 or email CDS at <cds@aum.edu>.
+
+**Student Privacy Policy:** 
+The Family Education Rights and Privacy Act of 1974, 
 as amended, (FERPA) requires institutions receiving federal monies to protect
 the privacy of students' educational records.
 For details go to the AUM's FERPA website: <http://www.aum.edu/academics/Registrars-office>
