Better disability policy

--- a/teaching/1610.markdown
+++ b/teaching/1610.markdown
@@ -136,6 +136,7 @@ Borderline grades are determined by in-class participation
 ## University policies
 
 **Disability accommodations:**
+AUM attempts to make reasonable accommodations to meet the special needs of its students with disabilities.
 Students who need accommodations are asked to arrange a meeting 
 during office hours to discuss your accommodations.
 If you have a conflict with my office hours, an alternative time
