Added suggested problems

--- a/teaching/1610.markdown
+++ b/teaching/1610.markdown
@@ -133,6 +133,44 @@ following weights.
 Borderline grades are determined by in-class participation 
 (in discussions and activities) as well as attandence.
 
+### Suggested homework problems
+
+Practice is a crucial component in the learning process.
+The following is a list of good exercise problems.
+They will not be collected or graded. 
+However, since all exams are very similar to questions from homework, 
+doing the homework problems regularly is crucial for success in this course.
+
+(Ignore questions (or parts of questions) about using a graphing utility)
+
+* Section 1.3: # 1 – 39; 43 – 71 all odd
+* Section 1.5: # 1 – 15; 27 – 33; 71 - 77 all odd 
+* Section 1.6: # 1 – 37; 53 – 71; 81 – 109 all odd
+* Section 2.1: # 5, 6, 7
+* Section 2.2: # 1 – 29 all odd
+* Section 2.3: # 5 – 79 all odd
+* Section 2.4: 1 – 59 all odd
+* Section 2.5: # 1 – 53 all odd
+* Section 3.1: # 1 – 23; 33 – 37; 65 – 79 all odd
+* Section 3.2: # 1 – 51; 57 – 69 all odd
+* Section 3.3: # 1 – 57; 75 – 85; 97 – 113 all odd
+* Section 3.4: # 1 – 33; 43 – 151 all odd
+* Section 3.5: # 1 – 75 all odd
+* Section 3.6: # 1 – 55 all odd
+* Section 3.8: # 5 – 15 all odd 
+* Section 4.1: # 1 – 43 all odd
+* Section 4.2: # 9 – 21; 39 - 51 all odd
+* Section 4.3: # 3 - 63 all odd
+* Section 4.4: # 1 – 57 all odd
+* Section 4.5: # 1 – 5; 13 - 41 all odd
+* Section 4.6: # 1 – 33; 41 - 45 all odd
+* Section 4.7: # 3 – 37 all odd
+* Section 4.8: # 7 – 35 all odd
+* Section 5.1: # 1 – 41; 61 - 67 all odd
+* Section 5.2: # 1 – 41; 45 - 59 all odd
+* Section 5.3: # 1 – 55; 67 - 71 all odd
+* Section 5.4: # 1 – 59; 79 - 97 all odd
+
 ## University policies
 
 **Disability accommodations:**
