--- a/teaching/1620.markdown
+++ b/teaching/1620.markdown
@@ -27,18 +27,20 @@ alternative meeting time may be arranged
 This is the second course in the calculus sequence.
 We will study more advanced integration techniques as well as their applications.
 Related topics of infinite series and parametric equations will also be discussed.
+In particular, we will cover...
+
+* Chapter 5: Integration 
+* Chapter 7: Applications of Integration 
+* Chapter 8: Integration Techniques, L’Hopital’s Rule and Improper Integrals 
+* Chapter 9: Infinite Series Chatper 
+* 10: Conics, Parametric Equations, and Polar Coordinates
+
 
 ### Prerequisite
 
-In order to succeed in this class, certain basic mathematical skills are necessary.
-In particular, we need to feel comfortable manipulating algebraic expressions
-and functions (including trigonometric, exponential, and logarithmic functions).
-These prerequisite can be satisfied by any one of the following:
-
-* MATH-1120 (Precalculus algebra) _and_ MATH-1550 (Trigonometry)
-* MATH-1150 (Precalculus algebra with trigonometry)
-* An ACT Math score of 25 or higher (620 on SAT)
-* An appropriate score in the AUM Math Placement Test.
+In order to succeed in this class, a solid understanding of basic calculus is necessary.
+These prerequisite can be satisfied by MATH-1610
+or an appropriate score in the AUM Math Placement Test.
 
 ### Textbook
 
@@ -50,10 +52,7 @@ Reading assignment and homework problems will be assigned from the textbook.
 
 Participation in in-class discussions and activities is an important part 
 of the learning process. 
-Therefore class attendance is expected and recorded. 
-It is your responsibility to sign the attendance sheet at each class meeting. 
-Moreover, in order to get a passing grade you should have attended at least 80% 
-of the classes for which attendance was recorded.
+Therefore class attendance is expected.
 
 ### Code of conduct
 
@@ -91,8 +90,7 @@ are not allowed on any of the quizzes and exams.
 
 ### Quizzes
 
-There will be a short quiz at the beginning of _every_ class meeting to test
-our understanding of the material discussed in the previous meeting.
+There will be a short quiz each week.
 No makeup quiz will be offered.
 However, a missing quiz may be excused if valid reasons
 (military assignments, medical issues, family emergency, etc)
@@ -111,7 +109,7 @@ but a missing exam may be excused if valid reasons
 and _proper documentation_ are provided _in advance_.
 Otherwise, a missing exam receives a score of zero.
 
-The mandatory final exam is scheduled at 5:00pm--7:30pm Dec. 5 2016.
+The mandatory final exam is scheduled 10:45am--1:15pm Dec. 6 2016.
 It constitutes a major part of your course grade.
 
 ### Grade composition
@@ -122,10 +120,9 @@ following weights.
 
 | Component  | Weight |
 |------------|--------|
-| Attendance |  5%    |
-| Quizzes    | 45%    | 
-| Exam 1     | 15%    |
-| Exam 2     | 15%    |
+| Quizzes    | 40%    | 
+| Exam 1     | 20%    |
+| Exam 2     | 20%    |
 | Final Exam | 20%    |
 
 ### Grading scale 
@@ -142,40 +139,10 @@ Borderline grades are determined by in-class participation
 ### Suggested homework problems
 
 Practice is a crucial component in the learning process.
-The following is a list of good exercise problems.
+Certain exercise problems will be assigned in class.
 They will not be collected or graded. 
 However, since all exams are very similar to questions from homework, 
 doing the homework problems regularly is crucial for our success in this course.
-
-(Ignore questions or parts that requires advanced graphing programs)
-
-* Section 1.3: # 1 – 39; 43 – 71 all odd
-* Section 1.5: # 1 – 15; 27 – 33; 71 - 77 all odd 
-* Section 1.6: # 1 – 37; 53 – 71; 81 – 109 all odd
-* Section 2.1: # 5, 6, 7
-* Section 2.2: # 1 – 29 all odd
-* Section 2.3: # 5 – 79 all odd
-* Section 2.4: # 1 – 59 all odd
-* Section 2.5: # 1 – 53 all odd
-* Section 3.1: # 1 – 23; 33 – 37; 65 – 79 all odd
-* Section 3.2: # 1 – 51; 57 – 69 all odd
-* Section 3.3: # 1 – 57; 75 – 85; 97 – 113 all odd
-* Section 3.4: # 1 – 33; 43 – 151 all odd
-* Section 3.5: # 1 – 75 all odd
-* Section 3.6: # 1 – 55 all odd
-* Section 3.8: # 5 – 15 all odd 
-* Section 4.1: # 1 – 43 all odd
-* Section 4.2: # 9 – 21; 39 - 51 all odd
-* Section 4.3: # 3 - 63 all odd
-* Section 4.4: # 1 – 57 all odd
-* Section 4.5: # 1 – 5; 13 - 41 all odd
-* Section 4.6: # 1 – 33; 41 - 45 all odd
-* Section 4.7: # 3 – 37 all odd
-* Section 4.8: # 7 – 35 all odd
-* Section 5.1: # 1 – 41; 61 - 67 all odd
-* Section 5.2: # 1 – 41; 45 - 59 all odd
-* Section 5.3: # 1 – 55; 67 - 71 all odd
-* Section 5.4: # 1 – 59; 79 - 97 all odd
 
 ## University policies
 
@@ -197,12 +164,11 @@ as amended, (FERPA) requires institutions receiving federal monies to protect
 the privacy of students' educational records.
 For details go to the AUM's FERPA website: <http://www.aum.edu/academics/Registrars-office>
 
-## Calendar
+## Course schedule
 
-Below is the tentative schedule, and it may not reflect changes announced in class.
-Please check with me for the most up-to-date information.
-
-<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=do4jkapu6fe5n1vf28d9f4cdf4%40group.calendar.google.com&amp;color=%2328754E&amp;ctz=America%2FChicago" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+Please see my teaching webpage for the detailed course calendar
+which lists dates for quizzes, exams, as well as topics to be covered
+each week.
 
 The instructor reserves the right to adjust the policies outlined in this course syllabus.
 All changes will be clearly communicated to the students in class.
