--- a/teaching/1120.markdown
+++ b/teaching/1120.markdown
@@ -156,9 +156,10 @@ For details go to the AUM's FERPA website: <http://www.aum.edu/academics/Registr
 
 ## Course schedule
 
-Please see my teaching webpage for the detailed course calendar
-which lists dates for quizzes, exams, as well as topics to be covered
-each week.
+Below is the tentative schedule.
+Please be aware that changes may be announced in class or via email.
+
+<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=ej6lqs0sskltphed84gqs3mol0%40group.calendar.google.com&amp;color=%238C500B&amp;ctz=America%2FChicago" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
 The instructor reserves the right to adjust the policies outlined in this course syllabus.
 All changes will be clearly communicated to the students in class.
