Updated office hour and meeting time

--- a/teaching/1610.markdown
+++ b/teaching/1610.markdown
@@ -7,12 +7,12 @@ title: MATH-1610
 
 ### When, where, and who
 
-* Time: Mon, Wed 5:00pm -- 6:40pm
+* Time: Mon, Wed 2:10pm -- 3:50pm
 * Room: 218 Goodwyn Hall
 * Instructor: Dr. Tianran Chen
 * Email: <tchen1@aum.edu>
 * Office: 310A Goodwyn Hall
-* Office hour: MW 3pm -- 5pm, TT 2pm -- 3pm
+* Office hour: MW 4pm -- 5pm, T 2pm -- 6pm
 * Web page: <http://www.tianranchen.org>
 
 My job is to help you to succeed in this class.
