--- a/teaching/1610.markdown
+++ b/teaching/1610.markdown
@@ -95,30 +95,29 @@ However, all the quizzes and exams are designed so that no calculator will be ne
 Therefore calculators or any smart devices with internet capabilities 
 are not allowed on any of the quizzes and exams.
 
-### Quizzes
+### Daily quizzes
 
 There will be a short quiz at the beginning of _every_ class meeting to test
 our understanding of the material discussed in the previous meeting.
-No makeup quiz will be offered.
+__No makeup quiz will be offered__.
 However, a missing quiz may be excused if valid reasons
 (military assignments, medical issues, family emergency, etc)
 and _proper documentation_ are provided _in advance_.
 Otherwise, a missing quiz receives a score of zero.
 
-In computing the final scores, _two of the lowest_ quiz scores 
+In computing the final scores, _one of the lowest_ quiz scores 
 (that are not missed) will be dropped.
 
-### Exams
+### Final exam
 
-Two in-class exams constitute an important part of your course grade.
-No makeup exams will be offered,
-but a missing exam may be excused if valid reasons
-(military assignments, medical issues, family emergency, etc)
-and _proper documentation_ are provided _in advance_.
-Otherwise, a missing exam receives a score of zero.
-
-The mandatory final exam is scheduled at 5:00pm--7:30pm Dec. 5 2016.
+The mandatory final exam is scheduled at 1:30pm--3:00pm May 3rd 2017.
 It constitutes a major part of your course grade.
+The final exam consists of two parts:
+
+- The _core part_ tests basic understanding of fundamental concepts.
+  In order to earn a passing grade (D or higher) one must achieve
+  80% or higher on this part.
+- The _other part_ is just the regular type of comprehensive exam.
 
 ### Grade composition
 
@@ -126,21 +125,20 @@ Your final grade is determined according to your overall performance of quizzes,
 the in-class exams, and the final exam, and is calculated according to the 
 following weights.
 
-| Component  | Weight |
+| Component  | Points |
 |------------|--------|
-| Attendance |  5%    |
-| Quizzes    | 45%    | 
-| Exam 1     | 15%    |
-| Exam 2     | 15%    |
-| Final Exam | 20%    |
+| Worksheet  |  250   |
+| Quizzes    |  500   |
+| Projects   |  200   |
+| Final Exam |   50   |
 
 ### Grading scale 
 
 * A: 90% - 100% 
-* B: 80% - 89% 
-* C: 65% - 79% 
-* D: 55% - 64% 
-* F: 54 or below 
+* B: 80% - 89.9% 
+* C: 70% - 79.9% 
+* D: 60% - 69.9% 
+* F: below 60% or fail to achieve 80% on the "core" part of the final exam 
 
 Borderline grades are determined by in-class participation 
 (in discussions and activities) as well as attendance.
